@@ -13,6 +13,7 @@
 - Improved: [#18428] [Plugin] Add widget description interfaces to documentation.
 - Improved: [#18487] Mini Helicopters track can now draw spinning tunnels.
 - Improved: [#18013, #18016, #18018, #18019, #18514] Added colour presets to Spiral Slide, Dodgems, Boat Hire, Flying Saucers, and Car Ride.
+- Change: [#17677] Open campaign window from finished campaign news.
 - Change: [#17998] Show cursor when using inverted mouse dragging.
 - Change: [#18230] Make the large flat to steep pieces available on the corkscrew roller coaster without cheats.
 - Change: [#18381] Convert custom invisible paths to the built-in ones.
